--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 /.pnp
 .pnp.js
 /ide
-
 # testing
 /coverage
 
@@ -18,6 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.idea
+yarn.lock
 
 npm-debug.log*
 yarn-debug.log*
