--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.20.0",
     "formik": "^2.2.0",
     "gh-pages": "^3.1.0",
+    "rc-slider": "^9.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
